PathUtils - update handling of relative path. Fixes triple slash bug in Files.